--- a/jogadores.html
+++ b/jogadores.html
@@ -37,9 +37,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="aventura.html">Aventura <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Aventura <span class="sr-only">(current)</span></a></li>
             <li><a href="personagens.html">Personagens</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="jogadores.html">Jogadores</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <a href="http://twitch.tv/coconut_killer" target="_blank" class="btn btn-primary">Watch on twitch</a>
@@ -52,24 +52,11 @@
     <!-- CONTENT -->
     <div class="content">
       <div class="container">
-        <h2>Terras marcadas pelo domínio élfico</h2>
-        <p>O ano é 83 da Era Tel-Quessir, era marcada pela massacrante vitória do grande rei élfico Barbärr na batalha contra os Drows de Fairëndor, que mudou a história para sempre. Com sua enorme força naval e poder jamais visto antes, a dominação élfica se espalhou por Ilyënor rapidamente. Muitos povos abaixaram as armas antes mesmo do combate, submetendo-se a negociações exploratórias, mas que ao menos os permitiam ser livres. Os que resistiram, tiveram seus reinos massacrados e seus sobreviventes vendidos como escravos. </p>
+        <article>
+          
+          <h2>Em breve!</h2>
 
-
-        <img src="img/map.jpg" />
-        <figcaption>Mapa desatualizado das Terras de Illinor. Antes do ano 83, a terras média era livre do domínio Élfico.</figcaption>
-
-
-        <p>Os mais velhos ainda se lembram dos tempos gloriosos em que a harmonia era vivenciada em todos os reinos, desde os labirintos de minas criados pelos pequenos anões às múltiplas e complexas cidades multiculturais em que humanos, dragonborns e até mesmo tieflings viviam em paz.</p>
-
-
-        <h2>Anphimor: Um Local de Resistência</h2>
-        <p>Hoje, das vastas terras de Ilyënor, poucas são as que podem ser consideradas inteiramente livres. Nestas, rebeldes, foragidos e até o cidadão comum encontram o apoio necessário para sobreviver ao domínio para além de suas pequenas fronteiras.</p>
-        <p>Nossa história começa na mais notável das terras livres. A terra da maior líder revolucionária da breve história de Ilyënor: Xena de Amphimoor. Conhecida por todos como a filha de pescadores transformada em guerreira pela violência élfica, Xena se tornou o símbolo da luta contra o domínio de Barbärr, liderando várias fugas e rebeliões. </p>
-
-        
-        <img src="img/xena.jpg" />
-        <figcaption>Xena de Amphimor, heroína da rebeldia dos povos livres contra o domínio de Barbär..</figcaption>
+        </article>
 
       </div>
     </div>
