--- a/personagens.html
+++ b/personagens.html
@@ -43,7 +43,7 @@
             <li><a href="jogadores.html">Jogadores</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <a href="http://twitch.tv/coconut_killer" target="_blank" class="btn btn-primary">Assista no twitch</a>
+            <a href="http://twitch.tv/diceanddisaster" target="_blank" class="btn btn-primary">Assista no twitch</a>
           </form>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
