--- a/jogadores.html
+++ b/jogadores.html
@@ -42,7 +42,7 @@
             <li><a href="jogadores.html">Jogadores</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <a href="http://twitch.tv/coconut_killer" target="_blank" class="btn btn-primary">Watch on twitch</a>
+            <a href="http://twitch.tv/diceanddisaster" target="_blank" class="btn btn-primary">Watch on twitch</a>
           </form>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
