--- a/personagens.html
+++ b/personagens.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dice & Disaster</title>
+    <title>Dice & Disorder</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Dice &amp; Disaster</a>
+          <a class="navbar-brand" href="#">Dice &amp; Disorder</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,7 +43,7 @@
             <li><a href="jogadores.html">Jogadores</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <a href="http://twitch.tv/diceanddisaster" target="_blank" class="btn btn-primary">Assista no twitch</a>
+            <a href="http://twitch.tv/diceandDisorder" target="_blank" class="btn btn-primary">Assista no twitch</a>
           </form>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
