Active link in navbar

--- a/jogadores.html
+++ b/jogadores.html
@@ -37,8 +37,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Aventura <span class="sr-only">(current)</span></a></li>
-            <li><a href="personagens.html">Personagens</a></li>
+            <li><a href="index.html">Aventura <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="personagens.html">Personagens</a></li>
             <li><a href="jogadores.html">Jogadores</a></li>
           </ul>
           <form class="navbar-form navbar-right">
