--- a/personagens.html
+++ b/personagens.html
@@ -39,8 +39,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Aventura</a></li>
-            <li class="active"><a href="personagens.html">Personagens <span class="sr-only">(current)</span></a></li>
-            <li><a href="jogadores.html">Jogadores</a></li>
+            <li><a href="personagens.html">Personagens <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="jogadores.html">Jogadores</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <a href="http://twitch.tv/diceandDisorder" target="_blank" class="btn btn-primary">Assista no twitch</a>
